fix(library): arrows z-index

--- a/src/app/shared/components/movies-carousel/movies-carousel.component.scss
+++ b/src/app/shared/components/movies-carousel/movies-carousel.component.scss
@@ -78,6 +78,7 @@
         height: calc(15rem + 2px);
         color: #fff;
         background-color: rgb(250 250 250 / 70%);
+        z-index: 2;
 
         a {
             cursor: pointer;
